# uNGINXed

./: .gitignore  README.md  pyproject.toml  user-guide.md
advisories/: security.json
examples/: crlf-injection.conf  default.conf  host-spoofing.conf  invalid-referers.conf  missing-root-location.conf  raw-response-reading.conf  vulnerable-nginx.conf
examples/configs/: add-header-multiline.conf  add-header-redefine.conf  crlf-injection.conf  dangerous-root-location.conf  host-spoofing.conf  missing-root-location.conf  ssrf.conf
examples/crlf-injection/: Dockerfile  README.md
examples/false-positives/: add_header_fp.conf  dont_report_not_resolved_var_fp.conf  duplicate_fp.conf  have_internal_fp.conf  http_fp.conf  more_set_headers_fp.conf  more_set_headers_replace_fp.conf  more_set_headers_status_fp.conf  more_set_headers_type_fp.conf  nested_fp.conf  non_block_fp.conf  not_host_var_fp.conf  not_secure_both_fp.conf  not_secure_outer_fp.conf  not_slashed_alias_fp.conf  origin_fp.conf  origin_https_fp.conf  origin_w_slash_anchored_fp.conf  origin_w_slash_fp.conf  proxy_from_location_var_var_fp.conf  proxy_pass_cr_fp.conf  referer_fp.conf  referer_subdomain_fp.conf  request_uri_fp.conf  request_uri_var_fp.conf  return_403_fp.conf  return_request_uri_fp.conf  rewrite_extract_fp.conf  simple_fp.conf  structure_fp.conf  wo_none_fp.conf
examples/map-missing-default/: Dockerfile  README.md  map-missing-default.conf
examples/ssrf/: Dockerfile  (+2 more)
unginxed/: __init__.py  __main__.py  config.py  directive.py  nginx_config.py  report.py  signature.py  signature_result.py
(+23 files in other folders)
