[tool.poetry]
name = "unginxed"
version = "0.1.0"
description = ""
authors = ["alloygoh <106863675+alloygoh@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
crossplane = "^0.5.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
