[tool.poetry]
name = "unginxed"
version = "0.1.0"
description = ""
authors = ["alloygoh <106863675+alloygoh@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
crossplane = "^0.5.8"
numpy = "^1.24.3"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
