[tool.poetry]
name = "unginxed"
version = "0.1.0"
description = ""
authors = ["alloygoh <106863675+alloygoh@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
crossplane = "^0.5.8"
xhtml2pdf = "^0.2.11"
jinja2 = "^3.1.2"
typing-extensions = "^4.6.3"
pathlib = "^1.0.1"
pyperclip = "^1.8.2"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
autopep8 = "^2.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
